# zarr2nc

./: .gitignore  CODEX.md  README.md  pixi.toml  pyproject.toml
examples/: create_example_zarr.py
src/zarr2nc/: __init__.py  __main__.py  cli.py  concat.py  config.py  doctor.py  encoding.py  merge.py  mpi.py  shards.py  slice_writer.py  validation.py
tests/: test_cli.py  test_concat.py  test_encoding.py  test_external_tools.py  test_ragged_site_merge.py  test_shards.py  test_slice_writer.py
